[package]
name = "confgrabber"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A tool to grab configurations from EOS devices"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
serde_json = "1.0"
url = "2.4"
base64 = "0.21" 